--- a/dimint_overlord/dimint_server.config
+++ b/dimint_overlord/dimint_server.config
@@ -1,5 +1,6 @@
 {
     "port_for_client": 5556,
     "port_for_node": 5557,
-    "overloads": ["127.0.0.1:5556"]
+    "overloads": ["127.0.0.1:5556"],
+    "zookeeper_hosts": "127.0.0.1:2181"
 }
