--- a/dimint_overlord/dimint_server.config
+++ b/dimint_overlord/dimint_server.config
@@ -3,5 +3,6 @@
     "port_for_node": 5557,
     "overloads": ["127.0.0.1:5556"],
     "zookeeper_hosts": "127.0.0.1:2181",
-    "hash_range" : 10000
+    "hash_range" : 10000,
+    "max_slave_count": 2
 }
